@@ -1,6 +1,6 @@
 The MIT License
 
-Copyright (c) 2008-2014 Stijn Sanders
+Copyright (c) 2008-2015 Stijn Sanders
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
